Minor change: fix vertical alignment in tables

--- a/static/style.css
+++ b/static/style.css
@@ -76,3 +76,5 @@ ul.messages li {
   width: 24px;
   border: none;
 }
+
+.table td, .table th {vertical-align: middle;}
